# ptx-math

./: CITATION.cff  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/driver/: CMakeLists.txt  main.cpp
apps/validation/: CMakeLists.txt  main.cu
src/: CMakeLists.txt
src/ptxm/: lg2.c  rcp64h.c  rsq64h.c  rsqrt.c
src/sassm/: CMakeLists.txt  ex2.c  models.h  rcp.c  sincos.c  sqrt.c  tuning.h
src/sassm/common/: CMakeLists.txt
src/sassm/reduction/: CMakeLists.txt  rro_ex2.c  rro_ex2.h
src/sassm/tables/: CMakeLists.txt
